Sitemap settings panel wrapping fix
git-svn-id: http://svn.vig/supra7/trunk@843 f05b830f-2085-0410-a479-8f75d39d0b34

--- a/src/webroot/cms/content-manager/sitemap/sitemap.css
+++ b/src/webroot/cms/content-manager/sitemap/sitemap.css
@@ -388,10 +388,14 @@
  * Panel
  */
 .sitemap-settings .middle {
-	padding: 10px 0 7px 10px;
+	padding: 10px 10px 7px;
+	white-space: nowrap;
 }
 .sitemap-settings .middle .yui3-button {
-	margin-right: 10px;
+	margin-left: 7px;
+}
+.sitemap-settings .middle .yui3-button:first-child {
+	margin-left: 0;
 }
 .sitemap-settings p.hidden-pages {
 	font-size: 14px;
